--- a/Ui/index.css
+++ b/Ui/index.css
@@ -10,7 +10,7 @@
 {
     width: 70%;
     height: 600px;
-    min-width: 50%;
+    min-width: 50vh;
     min-height: 70vh;
     margin:50px auto 0;
 }
@@ -36,15 +36,9 @@
     height: 30px;
     padding: 2px;
     outline: none;
+    min-width: 140px;
 }
 
-
-.convertor select
-{
-    width: 20%;
-    height: 30px;
-    margin-top: 4px;
-}
 
 .select-wrapper
 {
@@ -55,6 +49,10 @@
 {
     font-size: 14px;
     padding: 2px;
+    width: 20%;
+    height: 30px;
+    margin-top: 4px;
+    min-width: 120px;
 }
 
 #calculator
@@ -69,6 +67,7 @@
     cursor: pointer;
     color: #EEEEEE;
     font-size: 18px;
+    min-width: 90px;
 }
 
 #calculator:hover
@@ -78,9 +77,10 @@
 
 #result
 {   
-    width: 80px;
-    max-width: 250px;
+    width: 140px;
+    min-width: 140px;
     margin: 30px auto 0;
+    text-align: center;
 }
 
 #result input
